fix-spacing

--- a/public/css/stadniva-core-public.css
+++ b/public/css/stadniva-core-public.css
@@ -478,6 +478,7 @@ margin-bottom: 20px !important;
 .stdn-booking-data label.stdn-question-title,
 .stdn-booking-data input,
 .stdn-booking-data select,
-.stdn-booking-data textarea {
+.stdn-booking-data textarea,
+.stdn-booking-data {
     display: none !important;
 }
